<resources>
    <string name="app_name">AdoPet</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main_swipe">MainSwipe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="weight">Weight:</string>
    <string name="castrated">Castrated:</string>
    <string name="purebread">PureBread:</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="send">SEND</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
</resources>
